# axleLore

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/vehicles/: fzj80.yaml  fzj80_keywords.yaml
data/: fzj80_fsm.jsonl  fzj80_nhtsa.jsonl  fzj80_web.jsonl  fzj80_yaml.jsonl
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  MVP_ROADMAP.md  README.md  VEHICLE_SCHEMA.md
mobile/: app.json  package.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: chat.tsx  dashboard.tsx  service.tsx  settings.tsx
mobile/components/: ConnectionStatus.tsx
src/backend/: __init__.py  main.py
src/backend/api/: __init__.py  chat.py  kb.py  obd2.py  service.py  system.py  vehicles.py
src/backend/core/: __init__.py  config.py
src/backend/services/: __init__.py  chat.py  obd2.py  rag.py  vehicle.py
src/frontend/: package.json  vite.config.js
src/frontend/src/: app.css  app.html
src/frontend/src/components/: ChatInput.svelte  ChatMessage.svelte  NavBar.svelte  SensorGauge.svelte  ServiceRecordForm.svelte  SourceCitation.svelte
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/frontend/src/routes/dashboard/: +page.svelte
src/frontend/src/routes/service/: +page.svelte
src/frontend/src/routes/settings/: +page.svelte
src/frontend/src/routes/vehicle/: +page.svelte
src/scripts/systemd/: axlelore.service  rigsherpa.service
tests/: conftest.py
tests/test_api/: test_chat.py  test_service_records.py  test_system.py  test_vehicles.py
tests/test_rag/: test_chunker.py  test_rag_service.py
tests/test_services/: test_chat.py  test_vehicle.py
tests/test_tools/: test_forum_processor.py  test_yaml_seeder.py
tools/: orchestrate.py
tools/kb_builder/: __init__.py  build_pack.sh  builder.py  chunker.py
tools/processors/: __init__.py  forum.py  fsm.py  nhtsa.py  parts.py  web_article.py  yaml_seeder.py
tools/scrapers/: __init__.py  base.py  fsm_downloader.py  ih8mud.py  nhtsa.py  sor.py  state.py  web_articles.py
